--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
 
 body{
     background-color: black;
+    font-family: "Noto Sans Old Persian", sans-serif;
+    font-weight: 300;
 }
 
 .fiaplogo{
@@ -10,6 +12,25 @@ body{
 
 .titulo{
     color: #ED145b;
-    font-family: "Noto Sans Old Persian", sans-serif;
-    font-weight: 400;
+}
+
+.box1{
+    background-color: rgb(30, 30, 30);
+    color: #ED145b;
+    float: left;
+    text-align: center;
+}
+
+.titulocursos{
+    color: #ED145b;
+}
+
+.box2{
+    background-color: rgb(30, 30, 30);
+    text-align: center;
+}
+
+a{
+    text-decoration: none;
+    color: #ED145b;
 }
